# pyt2s

./: .gitignore  LICENSE  README.md  angular.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy.yml
docs/: 3rdpartylicenses.txt  404.html  index.html  main-CCUSS4ZZ.js  main-M777CBQK.js  main-V7SMIN5H.js  styles-TTUPDKAG.css
docs/assets/json/: acapela.json  cepstral.json  ibm-watson.json  voice-forge.json
docs/browser/: index.html  main-RFGMGSJO.js  styles-Z4AWVJTW.css
docs/browser/assets/json/: stream-elements.json
src/: index.html  styles.css
src/app/: app.component.ts  app.routes.ts
src/app/docs/: docs.component.html  docs.component.ts
src/app/home/: home.component.html  home.component.ts
src/app/service/: service.component.html  service.component.ts
src/assets/json/: oddcast.json  stream-labs.json
src/pyt2s/: service.py
src/pyt2s/models/: BaseModel.py  acapela_models.py  cepstral_models.py  ibm_watson_models.py  oddcast_models.py  stream_elements_models.py  streamlabs_models.py  voice_forge_models.py
src/pyt2s/services/: BaseService.py  __init__.py  acapela.py  cepstral.py  hume.py  ibm_watson.py  oddcast.py  service_manager.py  speechify.py  stream_elements.py  streamlabs.py  voice_forge.py
src/pyt2s/voices/: acapela.py  cepstral.py  hume.py  oddcast.py  speechify.py  stream_labs.py  voice_forge.py
voice_scrapers/: acapela.py  cepstral.py  hume.py  oddcast.py  speechify.py
